🔧 RANDER COSOLE LOG

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.21.2",
     "fs-extra": "^11.3.0",
     "node": "^24.2.0",
+    "node-fetch": "^3.3.2",
     "server.js": "^1.0.0",
     "simple-git": "^3.28.0"
   }
