--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "type": "module",
   "main": "server.js",
   "dependencies": {
+    "@supabase/supabase-js": "^2.50.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.6.0",
     "express": "^4.21.2",
     "fs-extra": "^11.3.0",
     "node": "^24.2.0",
